[gd_scene load_steps=2 format=1]

[ext_resource path="res://tela1.gd" type="Script" id=1]

[node name="Control" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1026.0
margin/bottom = 601.0
script/script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 512.025, 298.787 )
transform/scale = Vector2( 15.9357, 9.34305 )

[node name="Background" type="Sprite" parent="Node2D"]

transform/pos = Vector2( 0.113986, 0.0941362 )
transform/scale = Vector2( 0.0877192, 0.123726 )

[node name="Title" type="Sprite" parent="Node2D"]

transform/pos = Vector2( -0.676277, -19.3889 )
transform/scale = Vector2( 0.104157, 0.157128 )

[node name="BotaoOpcoes" type="Button" parent="."]

visibility/opacity = 0.9
rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 467.0
margin/right = 178.0
margin/bottom = 497.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="LabelOpcoes" type="Label" parent="BotaoOpcoes"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 22.0
margin/top = 8.0
margin/right = 71.0
margin/bottom = 22.0
text = "Opções"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BotaoJogar" type="Button" parent="."]

visibility/opacity = 0.9
rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 414.0
margin/top = 332.0
margin/right = 512.0
margin/bottom = 362.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="LabelJogar" type="Label" parent="BotaoJogar"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 33.0
margin/top = 8.0
margin/right = 65.0
margin/bottom = 22.0
text = "Jogar"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BotaoSair" type="Button" parent="."]

visibility/opacity = 0.9
rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 737.0
margin/top = 467.0
margin/right = 835.0
margin/bottom = 497.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="LabelSair" type="Label" parent="BotaoSair"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 37.0
margin/top = 9.0
margin/right = 77.0
margin/bottom = 23.0
text = "Sair"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


